--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -5,18 +5,34 @@
 </head>
 <body>
     <h1 id="msg">郵便番号API</h1>
-    <form name="apiform"><p>
-        郵便番号：<input type="text" name="zipcode">
-        <button type="button" id="btn1" onclick="zip_api(this.form)">実行</button>
-    </p></form>
-    
+    <form name="apiform">
+        <p>
+            郵便番号：<input type="text" name="zipcode">
+            <button type="button" id="btn1" onclick="zip_api(this.form)">実行</button>
+        </p>
+    </form>
+
     <div id="result">結果はここに表示</div>
+
     <script>
         async function zip_api(myForm) {
             const endpoint = "https://zipcloud.ibsnet.co.jp/api/search";
-            // ここにコードを書く
-            // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value; // 現状ではそのまま表示しているだけ
+            const zipcode = myForm.zipcode.value;// ここにコードを書く
+
+            try {
+                const response = await fetch(`${endpoint}?zipcode=${zipcode}`);
+                const data = await response.json();
+
+                if (data.status === 200 && data.results) {
+                    const result = data.results[0];
+                    const address = `${result.address1}${result.address2}${result.address3}`;
+                    document.getElementById("result").innerHTML = `住所: ${address}`;
+                } else {
+                    document.getElementById("result").innerHTML = `エラー: ${data.message}`;
+                }
+            } catch (error) {
+                document.getElementById("result").innerHTML = `通信エラー: ${error}`;
+            }
         }
     </script>
 </body>
