--- a/kadai5-2.html
+++ b/kadai5-2.html
@@ -4,17 +4,38 @@
     <title>演習課題5-2：外部APIの呼び出しテスト</title>
 </head>
 <body>
-    <h1 id="msg">何かのAPI</h1>
-    <form name="apiform"><p>
-        何かのフォーム：<input type="text" name="form_data">
-        <button type="button" id="btn1" onclick="some_api(this.form)">実行</button>
-    </p></form>
+    <h1 id="msg">Agify APIで年齢予測</h1>
+    <form name="apiform">
+        <p>
+            名前を入力：<input type="text" name="form_data" placeholder="例：Taro">
+            <button type="button" id="btn1" onclick="some_api(this.form)">実行</button>
+        </p>
+    </form>
     
-    <div id="result"></div>
+    <div id="result">ここに結果が表示されます</div>
+
     <script>
         async function some_api(myForm) {
             // ここにコードを書く
-            document.getElementById("result").innerHTML += myForm.form_data.value+"<br />";
+            const name = myForm.form_data.value.trim();
+            if (name === "") {
+                document.getElementById("result").innerHTML = "名前を入力してください。";
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://api.agify.io?name=${encodeURIComponent(name)}`);
+                const data = await response.json();
+
+                if (data.age !== null) {
+                    document.getElementById("result").innerHTML = `名前「${data.name}」の推定年齢は ${data.age} 歳です（${data.count} 件のデータに基づく）。`;
+                } else {
+                    document.getElementById("result").innerHTML = `「${data.name}」の年齢情報が見つかりませんでした。`;
+                }
+            } catch (error) {
+                document.getElementById("result").innerHTML = `エラーが発生しました: ${error}`;
+            }
+
             document.apiform.reset();
         }
     </script>
